# uncoil

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.txt
examples/: uncoil.txt
src/uncoil/: __main__.py
src/uncoil/config/: hard_ignore.py  soft_ignore.py
tests/: test_main.py
tests/integration/: test.ipynb  test_ipynb_conversion.py
