[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uncoil"
version = "1.0.1"
description = "A command-line tool to explore and print contents of directories with options to skip certain patterns."
authors = [{ name = "Matthew J. Thompson", email = "thompson.m.j@outlook.com" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "docopt-ng >= 0.9.0",
    "rich >= 13.6.0"
]

[project.scripts]
uncoil = "uncoil.__main__:main"

[tool.hatch.version]
enabled = true
