[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uncoil"]

[project]
name = "uncoil"
version = "1.3.0"
description = "A command-line tool to explore and print contents of directories with options to skip certain patterns."
authors = [{ name = "Matthew J. Thompson", email = "thompson.m.j@outlook.com" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich >= 13.6.0",
    "jupytext"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "nbformat",
    "ipynb",
    "ipykernel",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*:",
]

[project.scripts]
uncoil = "uncoil.__main__:main"

[tool.hatch.version]
enabled = true
